--- a/code-editor/index.html
+++ b/code-editor/index.html
@@ -13,6 +13,18 @@
     <script src="vendor/codemirror/addon/mode/simple.js"></script>
     <script src="vendor/codemirror/addon/mode/loadmode.js"></script>
     <script src="vendor/codemirror/mode/meta.js"></script>
+    <!-- Vim key bindings -->
+    <script src="vendor/codemirror/keymap/vim.js"></script>
+    <!-- Required for search -->
+    <script src="vendor/codemirror/addon/search/jump-to-line.js"></script>
+    <script src="vendor/codemirror/addon/search/match-highlighter.js"></script>
+    <script src="vendor/codemirror/addon/search/matchesonscrollbar.js"></script>
+    <script src="vendor/codemirror/addon/search/search.js"></script>
+    <script src="vendor/codemirror/addon/search/searchcursor.js"></script>
+    <script src="vendor/codemirror/addon/dialog/dialog.js"></script>
+    <script src="vendor/codemirror/addon/scroll/annotatescrollbar.js"></script>
+    <link rel="stylesheet" href="vendor/codemirror/addon/search/matchesonscrollbar.css" />
+    <link rel="stylesheet" href="vendor/codemirror/addon/dialog/dialog.css" />
     <script src="dist/lib/component-relay.js"></script>
     <!-- Required for styling selected text -->
     <script src="vendor/codemirror/addon/selection/mark-selection.js"></script>
@@ -22,14 +34,28 @@
   </head>
 
   <body class="sn-component">
-    <div id="wrapper">
+    <div class="wrapper">
       <textarea id="code" name="code"></textarea>
     <div>
-    <div id="select-wrapper">
-      <span id="language-label">Language:</span>
-      <select id="select" onchange="onLanguageSelect(event)"></select>
-      <span id="default-label" onclick="setDefaultLanguage(event)">Set as Default</span>
-      <span id="default-message" class="shown"></span>
+    <div class="sk-app-bar no-edges no-bottom-edge" style="width: inherit;">
+      <div class="left">
+        <div class="sk-app-bar-item no-pointer">
+          <span class="sk-p">Language:</span>
+        </div>
+        <div class="sk-app-bar-item no-pointer">
+          <select id="language-select" onchange="onLanguageSelect(event)"></select>
+        </div>
+        <div class="sk-app-bar-item">
+          <span id="default-label" class="sk-label" onclick="setDefaultLanguage(event)">Set as Default</span>
+        </div>
+      </div>
+      <div class="center"></div>
+      <div class="right">
+        <div class="sk-app-bar-item no-pointer border"></div>
+        <div class="sk-app-bar-item">
+          <span id="toggle-vim-mode-button" class="sk-label" onclick="toggleVimMode()">Enable Vim mode</span>
+        </div>
+      </div>
     </div>
     <script src="dist/main.js"></script>
   </body>
